<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_margin="56dp"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <cn.incongress.continuestudyeducation.uis.ClearEditText
            android:id="@+id/et_name_or_email"
            android:layout_width="match_parent"
            android:hint="@string/login_enter_mobile_email"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:baselineAligned="true"
            android:layout_height="wrap_content">
            <cn.incongress.continuestudyeducation.uis.ClearEditText
                android:id="@+id/et_identify_code"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:hint="@string/register_identify_code"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/bt_get_identify_code"
                android:layout_width="wrap_content"
                android:background="@drawable/button_background1"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_media"
                android:onClick="getIdentifyCode"
                android:text="@string/register_get_identify_code"/>
        </LinearLayout>
        <cn.incongress.continuestudyeducation.uis.ClearEditText
            android:id="@+id/et_pwd"
            android:layout_width="match_parent"
            android:hint="@string/login_enter_pwd"
            android:password="true"
            android:layout_height="wrap_content" />
        <cn.incongress.continuestudyeducation.uis.ClearEditText
            android:id="@+id/et_confirm_pwd"
            android:layout_width="match_parent"
            android:password="true"
            android:hint="@string/register_confirm_pwd"
            android:layout_height="wrap_content" />

            <Button
                android:id="@+id/bt_login"
                android:layout_width="match_parent"
                android:layout_margin="@dimen/layout_margin"
                android:onClick="login"
                android:background="@drawable/button_background2"
                android:textColor="@color/white"
                android:text="@string/login_login"
                android:textSize="@dimen/text_size_media"
                android:layout_height="wrap_content" />
    </LinearLayout>

</RelativeLayout>