<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_margin="56dp"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <cn.incongress.continuestudyeducation.uis.ClearEditText
            android:id="@+id/et_name_or_email"
            android:layout_width="match_parent"
            android:hint="@string/login_enter_mobile_email"
            android:layout_height="wrap_content" />
        <cn.incongress.continuestudyeducation.uis.ClearEditText
            android:id="@+id/et_pwd"
            android:layout_width="match_parent"
            android:hint="@string/login_enter_pwd"
            android:password="true"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/layout_margin"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="0dp"
                android:id="@+id/bt_forget_pwd"
                android:background="@drawable/button_background1"
                android:layout_margin="6dp"
                android:layout_weight="1"
                android:text="@string/login_forget_pwd"
                android:textSize="@dimen/text_size_media"
                android:textColor="@color/white"
                android:onClick="forgetPwd"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/bt_login"
                android:layout_width="0dp"
                android:text="@string/login_login"
                android:textColor="@color/white"
                android:layout_margin="6dp"
                android:background="@drawable/button_background2"
                android:onClick="login"
                android:textSize="@dimen/text_size_media"
                android:layout_weight="1"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_first_login"
        android:layout_width="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/layout_margin"
        android:text="@string/login_first_login"
        android:onClick="firstLogin"
        android:clickable="true"
        android:textColor="@color/button_background2"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content" />


</RelativeLayout>