<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="wrap_content">

    <TextView
        android:textSize="@dimen/text_size_large"
        android:layout_width="match_parent"
        android:padding="@dimen/layout_padding"
        android:text="@string/popup_album"
        android:id="@+id/tv_album"
        android:gravity="center"
        android:layout_height="wrap_content" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_height"
        android:background="@color/divider_color"/>

    <TextView
        android:id="@+id/tv_take_photo"
        android:textSize="@dimen/text_size_large"
        android:text="@string/popup_take_photo"
        android:padding="@dimen/layout_padding"
        android:gravity="center"

        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_height"
        android:background="@color/divider_color"/>
    <TextView
        android:textSize="@dimen/text_size_large"
        android:text="@string/popup_cancel"
        android:padding="@dimen/layout_padding"
        android:gravity="center"
        android:id="@+id/tv_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>