<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <include
        android:id="@+id/toolbar"
        layout="@layout/home_title" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/layout_padding">

        <cn.incongress.continuestudyeducation.uis.ClearEditText
            android:id="@+id/et_origin_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/changepwd_orgin_pwd"
            android:password="true"
            android:textSize="@dimen/text_size_media" />


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/layout_padding">

        <cn.incongress.continuestudyeducation.uis.ClearEditText
            android:id="@+id/et_new_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/changepwd_new_pwd"
            android:password="true"
            android:textSize="@dimen/text_size_media" />

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/layout_padding">

        <cn.incongress.continuestudyeducation.uis.ClearEditText
            android:id="@+id/et_confirm_new_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/changepwd_confirm_new_pwd"
            android:password="true"
            android:textSize="@dimen/text_size_media" />

    </RelativeLayout>


</LinearLayout>