<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@color/app_background_color"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar"
        layout="@layout/home_title"/>

    <android.support.v4.widget.SwipeRefreshLayout
        android:layout_width="match_parent"
        android:layout_below="@id/toolbar"
        android:id="@+id/refresh_layout"
        android:layout_height="match_parent">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_margin="@dimen/layout_margin"
            android:padding="@dimen/layout_padding"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:padding="@dimen/layout_padding"
                    android:layout_width="match_parent"
                    android:background="@color/white"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/tv_lesson_title"
                        android:textColor="@color/home_title_text_color"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="18dp"/>


                    <TextView
                        android:id="@+id/tv_lesson_info"
                        android:layout_marginTop="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_size_media"/>


                    <LinearLayout
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal"
                        android:gravity="center_vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:layout_width="17dp"
                            android:layout_height="17dp"
                            android:src="@mipmap/lesson_intro_time"/>
                        <TextView
                            android:id="@+id/tv_left_time"
                            android:layout_width="wrap_content"
                            android:textSize="15dp"
                            android:textColor="@color/button_background1"
                            android:layout_height="wrap_content" />

                    </LinearLayout>
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="0.1dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:background="@color/gray"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:textColor="@color/button_background2"
                        android:text="@string/teacher_plate"
                        android:textSize="16dp"
                        />
                    <TextView
                        android:id="@+id/tv_lesson_plate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lineSpacingExtra="3dp"
                        android:textSize="@dimen/text_size_media"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/layout_margin"
                    android:background="@color/white"
                    android:padding="@dimen/layout_padding"
                    android:orientation="vertical"
                    android:gravity="center_vertical"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/teacherSize"
                        android:layout_width="wrap_content"
                        android:textSize="15dp"
                        android:gravity="center_vertical"
                        android:text="@string/teacher_intro"
                        android:textColor="@color/button_background2"
                        android:layout_height="wrap_content" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.1dp"
                        android:layout_marginTop="@dimen/layout_margin"
                        android:background="@color/divider_color"/>

                    <ListView
                        android:id="@+id/lv_teachers"
                        android:layout_width="match_parent"
                        android:dividerHeight="0.1dp"
                        android:cacheColorHint="@android:color/transparent"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/tv_no_data"
                        android:layout_width="match_parent"
                        android:gravity="center_horizontal"
                        android:padding="@dimen/layout_padding"
                        android:visibility="gone"
                        android:text="@string/no_data"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </android.support.v4.widget.SwipeRefreshLayout>
</RelativeLayout>